@@ -1,7 +1,9 @@
 """Utility functions and classes for PyFeyn"""
 import pyx
+from pyfeyn.diagrams import FeynDiagram
 
 
+## Default units
 defunit = pyx.unit.cm
 todefunit = pyx.unit.tocm
 
@@ -22,3 +24,21 @@ class Visible:
 
     def getVisiblePath(self):
         return self.getPath()
+
+    def setDepth(self, depth):
+        self.depth = depth
+        return self
+
+    def getDepth(self):
+        if self.__dict__.has_key("depth"):
+            return self.depth
+        else:
+            return None
+        
+    def __cmp__(self, other):
+        """Compare with another visible class, just using layers."""
+        if FeynDiagram.options.DEBUG:
+            print "Comparing visible classes: ", \
+                  self.__class__, "->", self.getDepth(), "vs.", \
+                  other.__class__, "->", other.getDepth()
+        return cmp(self.getDepth(), other.getDepth())
